--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,11 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/ngx-gallery/bundles/ngx-gallery.umd.js"
             ]
+            
           },
           "configurations": {
             "production": {
