--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "^5.0.0-beta2",
+    "jquery": "^3.6.0",
+    "ngx-gallery": "^5.10.0",
+    "ngx-gallery-9": "^1.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
