--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,7 @@
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/ngx-gallery/bundles/ngx-gallery.umd.js"
+              "./node_modules/jquery/dist/jquery.min.js"
             ]
             
           },
